ajuste do menu e adicao de favicon

--- a/styles/index.css
+++ b/styles/index.css
@@ -27,15 +27,22 @@
   }
 
   header a {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
   }
 
   nav a {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
   }
+
   a .nav-link {
+    color: #ffffff;
+  }
+
+  .menu__item {
+    font-family: Dancing Script;
+    font-size: 1.3rem;
     color: #ffffff;
   }
 
@@ -52,9 +59,9 @@
     font-family: Dancing Script;
     font-size: 2.2rem;
     text-align: center;
-    color: white;
-    padding-top: 80px;
-    padding-left: 180px;
+    color: #ffffff;
+    padding-top: 1.8em;
+    padding-left: 4em;
   }
 
   .main {
@@ -213,9 +220,6 @@
 }
 
 @media (min-width: 656px) {
-  .nav-link {
-    color: #ffffff;
-  }
   .grade {
     display: grid;
     grid-template-areas:
@@ -229,18 +233,28 @@
   }
 
   .menu__image {
-    width: 19.2vh;
-    height: 14.4vh;
+    width: 19vh;
+    height: 14vh;
   }
 
   header a {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
   }
 
   nav a {
-    color: white;
+    color: #ffffff;
     text-decoration: none;
+  }
+
+  .nav-link {
+    color: #ffffff;
+  }
+
+  .menu__item {
+    font-family: Dancing Script;
+    font-size: 1.5rem;
+    color: #ffffff;
   }
 
   .cabecalho {
@@ -249,16 +263,16 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: auto;
-    height: 58.24vh;
+    height: 58vh;
   }
 
   .cabecalho__title {
     font-family: Dancing Script;
     font-size: 5rem;
     text-align: center;
-    color: white;
-    padding-top: 125px;
-    padding-left: 400px;
+    color: #ffffff;
+    padding-top: 1.5em;
+    padding-left: 6em;
   }
 
   .main {
